# OpenGLDebugger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
shaders/: triangle.frag  triangle.vert
src/: Camera.cpp  Camera.h  Shader.cpp  main.cpp  shader.cpp  shader.h
